--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <!doctype html>
+
+<style>
+  body {
+    background-color: #333;
+    color: #fff;
+    background-size:auto; /* adjust size */
+    border-radius: 5px;
+    border: none;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+	
+
+
+
+</style>
+	
 <html>
 <head>
 <meta charset="utf-8" http-equiv="pragma" content="no-cache">
 <title>SWMG</title>
 </head>
-<b>max is a Furry</b>
-<body>
-</body>
+<body>Cringe</body>
+
 </html>
