--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 <meta charset="utf-8" http-equiv="pragma" content="no-cache">
 <title>SWMG</title>
 </head>
-<body>Cringe</body>
+<body>Max is crunge</body>
 
 </html>
