--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
     padding: 10px;
     margin-bottom: 10px;
   }
+
+  h1 {
+    font-size: 2.5rem;
+    font-weight: 700;
+    line-height: 1.2;
+    margin: 0 0 1rem 0;
+  }
+
+  h2 {
+    font-size: 1.5rem;
+    font-weight: 700;
+    line-height: 1.2;
+    margin: 0 0 1rem 0;
+  }
 	
 
 
@@ -21,6 +35,16 @@
 <meta charset="utf-8" http-equiv="pragma" content="no-cache">
 <title>SWMG</title>
 </head>
-<body>Max is crunge</body>
+<body>
+
+<h1>SWMG</h1>
+<h2>Max is crunge</h2>
+<br>
+<br>
+<video width=60% height=auto controls>
+  <source src="videos/dog.mp4" type="video/mp4"n alt="Dog widem totes shivering teeth">
+  Your browser does not support the video tag.
+</video>
+</body>
 
 </html>
